--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.dhakasetup.sakib.dhakasetupprototype"
         minSdkVersion 19
         targetSdkVersion 25
-        versionCode 5
-        versionName "5.0"
+        versionCode 10
+        versionName "5.10"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -40,6 +40,15 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.mcxiaoke.volley:library:1.0.17'
 
+
+}
+
+dependencies {
+    implementation 'com.github.iammert:ExpandableLayout:1.4.1'
+}
+
+dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:+'
 }
 
 dependencies {
