--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.dhakasetup.sakib.dhakasetupprototype"
         minSdkVersion 19
         targetSdkVersion 25
-        versionCode 10
-        versionName "5.10"
+        versionCode 18
+        versionName "5.18"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -26,6 +26,7 @@ repositories {
 
 dependencies {
     implementation 'com.facebook.android:account-kit-sdk:4.+'
+    implementation 'com.google.android.gms:play-services-base:11.6.0'
 }
 
 dependencies {
@@ -45,6 +46,10 @@ dependencies {
 
 dependencies {
     implementation 'com.github.iammert:ExpandableLayout:1.4.1'
+}
+
+dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:+'
 }
 
 dependencies {
