--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,8 +38,10 @@
         </activity>
         <activity android:name=".Service1Activity" />
         <activity android:name=".EditprofileActivity" />
-        <activity android:name=".ServiceItemActivity"></activity>
-        <activity android:name=".CartActivity"></activity>
+        <activity android:name=".ServiceItemActivity" />
+        <activity android:name=".CartActivity" />
+        <activity android:name=".OrderActivity"
+            android:parentActivityName=".MainActivity"></activity>
     </application>
 
 </manifest> <!-- android:icon="@mipmap/ic_launcher" -->
