--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.dhakasetup.sakib.dhakasetupprototype"
         minSdkVersion 19
         targetSdkVersion 25
-        versionCode 18
-        versionName "5.18"
+        versionCode 22
+        versionName "5.22"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -27,7 +27,7 @@ repositories {
 dependencies {
     implementation 'com.facebook.android:account-kit-sdk:4.+'
     implementation 'com.google.android.gms:play-services-base:11.6.0'
-
+    implementation 'com.android.support:cardview-v7:27.1.0'
 }
 
 dependencies {
@@ -71,4 +71,16 @@ dependencies {
 
 dependencies {
     implementation 'com.android.support.constraint:constraint-layout:+'
+}
+
+dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:+'
+}
+
+dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:+'
+}
+
+dependencies {
+    implementation 'com.android.support:support-v4:27.+'
 }
