--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,8 +40,13 @@
         <activity android:name=".EditprofileActivity" />
         <activity android:name=".ServiceItemActivity" />
         <activity android:name=".CartActivity" />
-        <activity android:name=".OrderActivity"
-            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".OrderActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".SearchActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".ScheduleActivity"></activity>
     </application>
 
 </manifest> <!-- android:icon="@mipmap/ic_launcher" -->
