--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,9 @@ android {
     defaultConfig {
         applicationId "com.dhakasetup.sakib.dhakasetupprototype"
         minSdkVersion 19
-        targetSdkVersion 25
-        versionCode 25
-        versionName "5.25"
+        targetSdkVersion 26
+        versionCode 29
+        versionName "5.29"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -27,13 +27,15 @@ repositories {
 dependencies {
     implementation 'com.facebook.android:account-kit-sdk:4.+'
     implementation 'com.google.android.gms:play-services-base:11.6.0'
-    implementation 'com.android.support:cardview-v7:27.1.0'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:exifinterface:27.1.1'
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.0'
-    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -87,6 +89,14 @@ dependencies {
 
 dependencies {
     implementation 'com.android.support.constraint:constraint-layout:+'
+}
+
+dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:+'
+}
+
+dependencies {
+    implementation 'com.android.support:support-v4:27.+'
 }
 
 dependencies {
