--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.dhakasetup.sakib.dhakasetupprototype"
         minSdkVersion 19
         targetSdkVersion 26
-        versionCode 29
-        versionName "5.29"
+        versionCode 36
+        versionName "5.36"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -26,9 +26,15 @@ repositories {
 
 dependencies {
     implementation 'com.facebook.android:account-kit-sdk:4.+'
-    implementation 'com.google.android.gms:play-services-base:11.6.0'
+//    implementation 'com.google.android.gms:play-services-base:11.6.0'
+    implementation 'com.google.android.gms:play-services-auth-api-phone:11.0.4'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:exifinterface:27.1.1'
+
+    implementation 'com.google.firebase:firebase-core:11.8.0'
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
+    //implementation 'com.google.firebase:firebase-core:16.0.1'
+    //implementation 'com.google.firebase:firebase-messaging:17.3.4'
 
 }
 
@@ -43,7 +49,7 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.mcxiaoke.volley:library:1.0.17'
-
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 }
 
@@ -55,48 +61,20 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:+'
 }
 
-dependencies {
-    implementation 'com.android.support.constraint:constraint-layout:+'
-}
 
-dependencies {
-    implementation 'com.android.support.constraint:constraint-layout:+'
-}
-
-dependencies {
-    implementation 'com.android.support.constraint:constraint-layout:+'
-}
-
-dependencies {
-    implementation 'com.android.support.constraint:constraint-layout:+'
-}
-
-dependencies {
-    implementation 'com.android.support.constraint:constraint-layout:+'
-}
-
-dependencies {
-    implementation 'com.android.support.constraint:constraint-layout:+'
-}
-
-dependencies {
-    implementation 'com.android.support.constraint:constraint-layout:+'
-}
 
 dependencies {
     implementation 'com.android.support:support-v4:27.+'
 }
 
-dependencies {
-    implementation 'com.android.support.constraint:constraint-layout:+'
-}
+apply plugin: 'com.google.gms.google-services'
 
 dependencies {
     implementation 'com.android.support.constraint:constraint-layout:+'
 }
 
 dependencies {
-    implementation 'com.android.support:support-v4:27.+'
+    implementation 'com.android.support.constraint:constraint-layout:+'
 }
 
 dependencies {
